--- a/rootdir/init.sun8i.rc
+++ b/rootdir/init.sun8i.rc
@@ -1,36 +1,22 @@
 import init.sun8i.usb.rc
 
 on init
-#See storage config details at http://source.android.com/tech/storage/
-#	mkdir /mnt/shell/emulated 0700 shell shell
-#	mkdir /storage/emulated 0555 root root
+        export EXTERNAL_STORAGE /storage/sdcard0
+        export SECONDARY_STORAGE /storage/sdcard1
+        mkdir /mnt/media_rw/sdcard0 0700 media_rw media_rw
+        mkdir /mnt/media_rw/sdcard1 0700 media_rw media_rw
+        mkdir /mnt/media_rw/usbdisk0 0700 media_rw media_rw
+        mkdir /storage/sdcard0 0770 root root
+        mkdir /storage/sdcard1 0770 root root
+        mkdir /storage/usbdisk0 0770 root root
+        symlink /storage/sdcard0 /sdcard
+        symlink /storage/sdcard0 /mnt/sdcard
+        symlink /storage/sdcard1 /extsd
+        symlink /storage/sdcard1 /mnt/extsd
+       
+    mount debugfs debugfs /sys/kernel/debug
+    mkdir /databk 0700 root  system
 
-#	export EXTERNAL_STORAGE /storage/emulated/legacy
-#	export EMULATED_STORAGE_SOURCE /mnt/shell/emulated
-#	export EMULATED_STORAGE_TARGET /storage/emulated
-#	export MEDIA_STORAGE /mnt/media/sdcard
-
-#	Support legacy paths
-#	symlink /storage/emulated/legacy /sdcard
-#	symlink /storage/emulated/legacy /mnt/sdcard
-#	symlink /storage/emulated/legacy /storage/sdcard0
-#	symlink /mnt/shell/emulated/0 /storage/emulated/legacy
-
-	export EXTERNAL_STORAGE /mnt/sdcard
-	mkdir /mnt/sdcard 0700 system system
-	symlink /mnt/sdcard /sdcard
-	symlink /mnt/sdcard /storage/sdcard0
-	
-	mkdir /mnt/extsd 0700 system system
-	symlink /mnt/extsd  /storage/extsd
-	symlink /mnt/sdcard /storage/sdcard1
-	
-	mkdir /mnt/usbhost1 0700 system system
-	symlink /mnt/usbhost1  /storage/usbhost1
-	symlink /mnt/usbhost1 /storage/sdcard2
-	
-	mount debugfs debugfs /sys/kernel/debug
-	mkdir /databk 0700 root  system
 # RDA add begin
 on post-fs-data
     mknod /dev/rdacombo  c 194 0;
